# snowstrike

./: .gitignore  Cargo.toml  justfile  readme.md
.cargo/: config.toml
assets/: map.aseprite
assets/menu/: play.aseprite  title.aseprite
assets/shader/: blur.wgsl
src/: blur.rs  button.rs  fps.rs  lib.rs  main.rs  menu.rs  setup.rs
src/menu/: button.rs  mod.rs
src/menus/: main.rs  mod.rs
src/ui/: button.rs  mod.rs
