[package]
name = "snowstrike"
publish = false
version = "0.0.0"
edition = "2024"

[features]
default = ["dev"]
dev = [
    # debug tools
    "bevy/debug",
    # faster incremental builds
    "bevy/dynamic_linking",
    # hot-reload assets
    "bevy/file_watcher"
]
release = [
    # reduce log levels for smaller binary size
    "log/max_level_debug",
    "log/release_max_level_warn",
    # asset optimisation
    "bevy/asset_processor",
    "bevy_aseprite_ultra/asset_processing"
]

[dependencies]
bevy-discord-rpc = { git = "https://github.com/isitreallyalive/bevy-discord-rpc", rev = "a6fdcb9" }
bevy_aseprite_ultra = "0.7.0"
bevy_modern_pixel_camera = "0.4.0"
image = { version = "0.25.9", default-features = false, features = ["png"] }
log = { version = "0.4.29", optional = true }
winit = { version = "0.30.12", default-features = false }

[dependencies.bevy]
version = "0.17.3"
default-features = false
features = [
    # graphics
    "bevy_winit",
    "bevy_sprite",
    "x11",
    "wayland",

    # audio
    "bevy_audio",
    "vorbis",

    # ui
    "bevy_ui",
    "bevy_text",

    # other
    "multi_threaded",
    "bevy_state"
]

# build profiles

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
