[package]
name = "snowstrike"
publish = false
version = "0.0.0"
edition = "2024"

[features]
default = ["dev"]
dev = [
    # debug tools
    "bevy/debug",
    # faster incremental builds
    "bevy/dynamic_linking",
    # hot-reload assets
    "bevy/file_watcher"
]
release = [
    # reduce log levels for smaller binary size
    "log/max_level_debug",
    "log/release_max_level_warn",
    # asset optimisation
    "bevy/asset_processor",
    "bevy_aseprite_ultra/asset_processing"
]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["2d"] }
bevy-discord-rpc = { git = "https://github.com/isitreallyalive/bevy-discord-rpc", rev = "0914143" }
# todo: change these back to upstream once pr is accepted
bevy_aseprite_ultra = { git = "https://github.com/isitreallyalive/bevy_aseprite_ultra", rev = "1c1bbdb" }
bevy_modern_pixel_camera = { git = "https://github.com/isitreallyalive/bevy_modern_pixel_camera", rev = "f38d599" }
image = { version = "0.25.9", default-features = false, features = ["png"] }
log = { version = "0.4.29", optional = true }
winit = { version = "0.30.12", default-features = false }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
