[package]
name = "snowstrike"
publish = false
version = "0.0.0"
edition = "2024"

[features]
default = ["dev"]
dev = [
    # debug tools
    "bevy/debug",
    # faster incremental builds
    "bevy/dynamic_linking",
    # hot-reload assets
    "bevy/file_watcher"
]
release = [
    # reduce log levels for smaller binary size
    "log/max_level_debug",
    "log/release_max_level_warn"
]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["2d"] }
bevy_aseprite_ultra = { git = "https://github.com/Lommix/bevy_aseprite_ultra", rev = "780c0f7" }
bevy-discord-rpc = { git = "https://github.com/isitreallyalive/bevy-discord-rpc", rev = "c5a11ac" }
bevy-icon = { git = "https://github.com/isitreallyalive/bevy-icon", rev = "b0b4bd9", features = ["image"] }
bevy_modern_pixel_camera = "0.5.0"
image = { version = "0.25.9", default-features = false, features = ["png"] }
log = { version = "0.4.29", optional = true }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
